190507
- Densities: Corrected calculations of objects/mm3

- Segmentation: Correction is now made from a mean NOT median value of the whole image (before were errors with dark images)


190327 
- Neuropil mask: - The area of neuropil was the oposite. Now it is fixed.
		 - New output: Object density in mm3 (depending of the resolution, asked at the begining).

- Plaque distances: - Neuropil marsk is applyed to all the channels.
        - Areas of each bin are calculated according to Neuropil mask + plaque Mask.
