@@ -1,0 +1,53 @@
+function [] = segment_preGUI()
+
+S.fh = figure('units','pixels',...
+              'position',[800 300 200 150],...
+              'menubar','none',...
+              'name','Type of segmentation',...
+              'numbertitle','off',...
+              'resize','off');
+          
+S.text(1) = uicontrol('style','text',...
+                 'unit','pix',...
+                 'position',[0 100 200 30],...
+                  'string','Select the type of segmentation');
+
+S.pb(1) = uicontrol('style','push',...
+                 'unit','pix',...
+                 'position',[35 70 130 30],...
+                 'string','Auto local threshold',...
+                 'callback',{@local,S},...
+                 'enable','on');   
+             
+S.pb(2) = uicontrol('style','push',...
+                 'unit','pix',...
+                 'position',[35 30 130 30],...
+                 'string','Fixed value threshold',...
+                 'callback',{@fixed,S},...
+                 'enable','on');        
+             
+
+
+      
+                        
+     
+S.NAME = {'No sequence selected'};
+
+             
+  
+
+    function [] = local(varargin)
+    % Callback for pushbutton.
+            close (S.fh);
+            segment_GUI            
+    end
+
+    function [] = fixed(varargin)
+    % Callback for pushbutton.
+             close (S.fh);
+             segment_fixedGUI             
+    end
+
+    
+
+end
